# ft_irc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Notes.txt  README.md  client.cpp  client.hpp  config  ircserv  main.cpp  message.cpp  message.hpp  rain.theme  serv  server.cpp  server.hpp  test  test2  valgrind_output.txt
Extras/: Notes.txt  Q&A.txt  TODO.txt
channel/: channel.cpp  channel.hpp
include/: Channel.hpp  Client.hpp  Commands.hpp  Exceptions.hpp  HandShake.hpp  IRC.hpp  MsgParser.hpp  Server.hpp  channel.hpp
include/commands/: CapCommand.hpp  ICommands.hpp  InviteCommand.hpp  Join.hpp  JoinCommand.hpp  KickCommand.hpp  ModeCommand.hpp  NickCommand.hpp  NoticeCommand.hpp  OperCommand.hpp  PartCommand.hpp  PassCommand.hpp  PingCommand.hpp  PrivMsgCommand.hpp  QuitCommand.hpp  TopicCommand.hpp  UserCommand.hpp  WhoisCommand.hpp
irssi/: Dockerfile  README.md  config
parser/: MsgParser.cpp  MsgParser.hpp  MsgParsing.cpp  MsgParsing.hpp
src/channel/: Channel.cpp
src/client/: Client.cpp
src/commands/: CapCommand.cpp  Commands.cpp  ICommands.cpp  InviteCommand.cpp  Join.cpp  JoinCommand.cpp  KickCommand.cpp  ModeCommand.cpp  NickCommand.cpp  NoticeCommand.cpp  OperCommand.cpp  PartCommand.cpp  PassCommand.cpp  PingCommand.cpp  PrivMsgCommand.cpp  QuitCommand.cpp  TopicCommand.cpp  UserCommand.cpp  WhoisCommand.cpp
src/handShake/: HandShake.cpp
src/interface/: IrcInterface.cpp  IrcInterface.hpp
src/parser/: MsgParser.cpp
src/server/: server.cpp
